--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -6,13 +6,13 @@
   <title>Submit a Campaign - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- ✅ Load Firebase config (defines window.firebaseConfig) -->
+  <!-- ✅ Firebase Config -->
   <script src="/js/firebaseConfig.js"></script>
 
-  <!-- ✅ Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
+  <!-- ✅ Firebase SDKs (compat versions for script use) -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 </head>
 <body>
   <header>
@@ -46,9 +46,10 @@
     <p style="text-align: center; padding: 20px;">© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
-  <!-- ✅ Main script (must be last, and a module) -->
-  <script type="module" src="/js/submit-campaign.js"></script>
+  <!-- ✅ Main campaign logic -->
+  <script src="/js/submit-campaign.js"></script>
 </body>
 </html>
+
 
 
