--- a/public/repost.html
+++ b/public/repost.html
@@ -2,213 +2,146 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Repost Campaigns - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+
+  <!-- ✅ Firebase config -->
   <script src="/js/firebaseConfig.js"></script>
-  <script>
-    firebase.initializeApp(window.firebaseConfig);
-  </script>
+
+  <!-- ✅ Firebase compat SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
+      background-color: #111;
+      color: #eee;
       margin: 0;
-      padding: 0;
     }
+
     header {
-      background-color: #2a2a2a;
-      color: white;
+      background-color: #1e1e1e;
+      padding: 20px;
       text-align: center;
-      padding: 20px 0;
     }
+
     h1 {
-      font-size: 36px;
       margin: 0;
+      font-size: 26px;
     }
+
     .container {
       padding: 20px;
-      max-width: 1200px;
+      max-width: 1000px;
       margin: 0 auto;
     }
-    .track-item {
-      border: 1px solid #ddd;
-      padding: 20px;
-      margin: 10px 0;
-      background-color: white;
+
+    .campaign-card {
+      background-color: #222;
+      border: 1px solid #333;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+      padding: 16px;
+      margin-bottom: 20px;
+      display: flex;
+      flex-direction: row;
+      gap: 16px;
     }
-    iframe {
-      width: 100%;
-      height: 166px;
-      border-radius: 10px;
+
+    .artwork {
+      width: 100px;
+      height: 100px;
+      border-radius: 8px;
+      object-fit: cover;
     }
-    .track-actions {
-      margin-top: 10px;
+
+    .campaign-details {
+      flex: 1;
     }
-    .track-actions label {
-      display: block;
-      margin: 5px 0;
-      font-size: 15px;
+
+    .campaign-details h3 {
+      margin: 0 0 6px;
+      font-size: 18px;
     }
-    textarea {
-      width: 100%;
-      height: 50px;
-      border-radius: 5px;
-      margin-top: 5px;
-      padding: 8px;
-      border: 1px solid #ccc;
-    }
-    .status-message {
-      margin-top: 10px;
-      font-weight: bold;
-      color: #f44336;
-    }
-    button {
-      background-color: #4caf50;
-      color: white;
-      padding: 10px 20px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 10px 0;
+
+    .campaign-details p {
+      margin: 4px 0;
       font-size: 14px;
+    }
+
+    .soundcloud-player {
+      margin-top: 10px;
+    }
+
+    footer {
+      background-color: #1a1a1a;
+      color: #999;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>🎶 Available Tracks to Repost</h1>
+    <h1>🎧 Repost Tracks & Earn Credits</h1>
   </header>
 
   <main class="container">
-    <div id="track-list">Loading campaigns...</div>
+    <div id="campaign-feed">
+      <p>Loading campaigns...</p>
+    </div>
   </main>
 
   <footer>
     <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
+  <!-- ✅ Repost Feed Script -->
   <script>
+    firebase.initializeApp(window.firebaseConfig);
     const db = firebase.firestore();
-    const trackList = document.getElementById("track-list");
+    const feed = document.getElementById("campaign-feed");
 
-    firebase.auth().onAuthStateChanged(async (user) => {
-      if (!user) {
-        trackList.innerHTML = "<p>❌ Please log in to see repostable tracks.</p>";
+    async function loadCampaigns() {
+      const snap = await db.collection("campaigns").orderBy("createdAt", "desc").get();
+      if (snap.empty) {
+        feed.innerHTML = "<p>No campaigns available.</p>";
         return;
       }
 
-      const userRef = db.collection("users").doc(user.uid);
-      const userSnap = await userRef.get();
-      const userData = userSnap.data();
-      const baseReward = Math.floor((userData.soundcloud?.followers || 0) / 100);
-      if (baseReward === 0) {
-        trackList.innerHTML = "<p>⚠️ You need at least 100 SoundCloud followers to earn credits.</p>";
-        return;
-      }
+      feed.innerHTML = "";
+      snap.forEach(doc => {
+        const data = doc.data();
+        const div = document.createElement("div");
+        div.className = "campaign-card";
 
-      const repostedIds = new Set(
-        (await db.collection("reposts").where("userId", "==", user.uid).get()).docs.map(doc => doc.data().campaignId)
-      );
-
-      const campaignsSnap = await db.collection("campaigns").get();
-      const campaigns = campaignsSnap.docs
-        .map(doc => ({ id: doc.id, ...doc.data() }))
-        .filter(c => !repostedIds.has(c.id) && c.credits >= baseReward);
-
-      if (campaigns.length === 0) {
-        trackList.innerHTML = "<p>🎉 No eligible campaigns available at the moment.</p>";
-        return;
-      }
-
-      trackList.innerHTML = "";
-      for (const c of campaigns) {
-        const el = document.createElement("div");
-        el.className = "track-item";
-        el.innerHTML = `
-          <h3>${c.genre}</h3>
-          <iframe src="https://w.soundcloud.com/player/?url=${encodeURIComponent(c.trackUrl)}&color=%23ff5500" frameborder="no" scrolling="no"></iframe>
-          <div class="track-actions">
-            <label><input type="checkbox" class="like" checked /> 💖 Like (+1 credit)</label>
-            <label><input type="checkbox" class="follow" checked /> 👣 Follow (+2 credits)</label>
-            <label><input type="checkbox" class="comment" /> 💬 Comment (+2 credits)</label>
-            <textarea class="commentText" placeholder="Leave a comment..."></textarea>
-            <button>✅ Repost & Earn</button>
-            <div class="status-message"></div>
+        div.innerHTML = `
+          <img src="${data.artworkUrl || '/assets/default-art.png'}" class="artwork" alt="Artwork" />
+          <div class="campaign-details">
+            <h3>${data.title || "Untitled Track"}</h3>
+            <p>👤 ${data.artist || "Unknown Artist"}</p>
+            <p>🎵 Genre: ${data.genre}</p>
+            <p>🔥 Credits Left: ${data.credits}</p>
+            <div class="soundcloud-player">
+              <iframe width="100%" height="120" scrolling="no" frameborder="no"
+                src="https://w.soundcloud.com/player/?url=${encodeURIComponent(data.trackUrl)}&color=%23ff5500&auto_play=false&show_user=true&buying=false&sharing=false&download=false&show_artwork=false">
+              </iframe>
+            </div>
           </div>
         `;
 
-        const like = el.querySelector(".like");
-        const follow = el.querySelector(".follow");
-        const comment = el.querySelector(".comment");
-        const commentText = el.querySelector(".commentText");
-        const status = el.querySelector(".status-message");
-        const button = el.querySelector("button");
+        feed.appendChild(div);
+      });
+    }
 
-        button.addEventListener("click", async () => {
-          let total = baseReward;
-          if (like.checked) total += 1;
-          if (follow.checked) total += 2;
-          if (comment.checked && commentText.value.trim()) total += 2;
-
-          const campaignRef = db.collection("campaigns").doc(c.id);
-          const campaignSnap = await campaignRef.get();
-          const campaignData = campaignSnap.data();
-
-          if (campaignData.credits < total) {
-            status.textContent = "❌ Not enough campaign credits.";
-            return;
-          }
-
-          await db.collection("reposts").doc(`${user.uid}_${c.id}`).set({
-            userId: user.uid,
-            campaignId: c.id,
-            trackUrl: c.trackUrl,
-            timestamp: firebase.firestore.FieldValue.serverTimestamp(),
-            prompted: false,
-            like: like.checked,
-            follow: follow.checked,
-            comment: comment.checked,
-            commentText: commentText.value
-          });
-
-          await userRef.update({ credits: (userData.credits || 0) + total });
-          await campaignRef.update({ credits: campaignData.credits - total });
-
-          await db.collection("transactions").add({
-            userId: user.uid,
-            type: "earned",
-            amount: total,
-            reason: `Reposted ${c.trackUrl}`,
-            timestamp: firebase.firestore.FieldValue.serverTimestamp()
-          });
-
-          status.textContent = `✅ Reposted! You earned ${total} credits.`;
-          button.disabled = true;
-        });
-
-        trackList.appendChild(el);
-      }
-    });
+    loadCampaigns();
   </script>
 </body>
 </html>
+
 
 
 
