--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,135 +3,126 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard - TrackRepost</title>
+  <title>Dashboard – TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
-
-  <!-- ✅ Firebase SDKs (compat versions) -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-
-  <!-- ✅ Firebase Config -->
   <script src="/js/firebaseConfig.js"></script>
-
-  <!-- ✅ Initialize Firebase -->
-  <script>
-    firebase.initializeApp(window.firebaseConfig);
-  </script>
+  <script>firebase.initializeApp(window.firebaseConfig);</script>
 
   <style>
-    .logo-header {
-      max-width: 240px;
-      margin: 20px auto 10px;
-      display: block;
+    body {
+      font-family: Arial, sans-serif;
+      background: #0e0e0e;
+      color: white;
+      margin: 0;
+      padding: 0;
     }
-    .user-info {
+
+    header {
+      text-align: center;
+      padding: 20px;
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 4px 10px;
+      border-radius: 6px;
+      font-size: 14px;
+      margin-top: 5px;
+    }
+
+    .free { background: #444; color: #ccc; }
+    .pro { background: #ff5500; color: white; }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    .campaign-card {
+      background-color: #1a1a1a;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+
+    .campaign-card img {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 10px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 166px;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+
+    table {
+      width: 100%;
       margin-top: 20px;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 10px;
+      border-bottom: 1px solid #333;
+      text-align: left;
+    }
+
+    th {
+      background-color: #222;
+    }
+
+    footer {
+      background: #111;
+      text-align: center;
+      color: #aaa;
+      padding: 15px;
+      font-size: 13px;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" class="logo-header" />
+    <h1>📊 Your Dashboard</h1>
+    <p id="userInfo"></p>
+    <p id="planBadge"></p>
+    <p id="creditBalance"></p>
+    <button id="logout-btn">Logout</button>
   </header>
 
-  <div class="container">
-    <!-- 🔐 Auth Buttons -->
-    <div id="site-header">
-      <button id="login-btn">Sign in with Google</button>
-      <button id="logout-btn" style="display:none;">Log Out</button>
-      <div id="user-info"></div>
-    </div>
+  <main class="container">
+    <h2>🎯 Your Campaign</h2>
+    <div id="campaigns"><p>Loading campaigns...</p></div>
 
-    <!-- 🧑 User Info -->
-    <div id="userInfo" class="info-box">
-      Loading user...
-      <div id="planBadge" class="plan-badge"></div>
-    </div>
-
-    <!-- 💰 Credits -->
-    <div class="credits-box">
-      <h2>💰 Credits</h2>
-      <p id="creditBalance">Loading...</p>
-      <a href="credits.html" class="button">Buy More Credits</a>
-    </div>
-
-    <!-- 📣 Campaigns -->
-    <div class="campaigns-section">
-      <h2>📣 Your Campaigns</h2>
-      <div id="campaigns" class="campaigns-grid">Loading campaigns...</div>
-    </div>
-  </div>
+    <h2>📈 Credit History</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Amount</th>
+          <th>Reason</th>
+          <th>Date</th>
+        </tr>
+      </thead>
+      <tbody id="transactions">
+        <tr><td colspan="4">Loading...</td></tr>
+      </tbody>
+    </table>
+  </main>
 
   <footer>
-    <p>© 2025 TrackRepost. All rights reserved.</p>
+    <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
-  <!-- ✅ Scripts -->
-  <script src="/js/login.js" defer></script>
-  <script src="/js/dashboard.js" defer></script>
-
-  <script>
-    const loginBtn = document.getElementById('login-btn');
-    const logoutBtn = document.getElementById('logout-btn');
-    const userInfo = document.getElementById('user-info');
-    const creditBalance = document.getElementById('creditBalance');
-    
-    const auth = firebase.auth();
-
-    // Sign in with Google
-    loginBtn.addEventListener('click', async () => {
-      const provider = new firebase.auth.GoogleAuthProvider();
-      try {
-        const result = await auth.signInWithPopup(provider);
-        const user = result.user;
-        console.log('User signed in:', user);
-        userInfo.innerHTML = `Hello, ${user.displayName}`;
-        loginBtn.style.display = 'none';
-        logoutBtn.style.display = 'block';
-        fetchUserCredits(user.uid);
-      } catch (error) {
-        console.error('Error during sign-in:', error);
-      }
-    });
-
-    // Sign out
-    logoutBtn.addEventListener('click', async () => {
-      await auth.signOut();
-      console.log('User signed out');
-      userInfo.innerHTML = '';
-      loginBtn.style.display = 'block';
-      logoutBtn.style.display = 'none';
-      creditBalance.textContent = 'Loading...';
-    });
-
-    // Fetch user credits from Firestore
-    async function fetchUserCredits(userId) {
-      const db = firebase.firestore();
-      const userRef = db.collection('users').doc(userId);
-      const userDoc = await userRef.get();
-      if (userDoc.exists) {
-        const userData = userDoc.data();
-        creditBalance.textContent = `Credits: ${userData.credits || 0}`;
-      }
-    }
-
-    // Handle auth state change
-    firebase.auth().onAuthStateChanged((user) => {
-      if (user) {
-        userInfo.innerHTML = `Hello, ${user.displayName}`;
-        loginBtn.style.display = 'none';
-        logoutBtn.style.display = 'block';
-        fetchUserCredits(user.uid);
-      } else {
-        userInfo.innerHTML = '';
-        loginBtn.style.display = 'block';
-        logoutBtn.style.display = 'none';
-        creditBalance.textContent = 'Loading...';
-      }
-    });
-  </script>
+  <script src="/js/dashboard.js"></script>
 </body>
 </html>
+
 
 
