--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -3,51 +3,126 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Submit a Campaign - TrackRepost</title>
+  <title>Submit Campaign – TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- ✅ Firebase Config -->
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
   <script src="/js/firebaseConfig.js"></script>
+  <script>firebase.initializeApp(window.firebaseConfig);</script>
 
-  <!-- ✅ Firebase SDKs (compat versions for script use) -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  <style>
+    body {
+      background: #0e0e0e;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px;
+    }
+
+    header img {
+      height: 60px;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+      background: #1a1a1a;
+      border-radius: 12px;
+    }
+
+    h2 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      margin-top: 15px;
+    }
+
+    input[type="url"],
+    input[type="text"],
+    input[type="number"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: none;
+      border-radius: 5px;
+      background: #222;
+      color: white;
+    }
+
+    button {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background-color: #ff5500;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #e04800;
+    }
+
+    .status-message {
+      margin-top: 15px;
+      font-weight: bold;
+      color: #00ffaa;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 13px;
+      padding: 20px;
+      background: #111;
+      color: #999;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" style="max-width: 220px; margin: 20px auto; display: block;" />
+    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" />
   </header>
 
-  <main class="container" style="max-width: 500px; margin: 0 auto; padding: 20px;">
-    <div id="current-credits" style="text-align: center; font-weight: bold; margin-bottom: 15px;">
-      Loading credits...
-    </div>
-
-    <h2 style="text-align: center;">🚀 Submit Your Track</h2>
+  <main class="container">
+    <h2>🚀 Submit a Campaign</h2>
+    <p id="current-credits">Checking your balance...</p>
 
     <form id="campaign-form" class="campaign-form">
       <label for="trackUrl">SoundCloud Track URL:</label>
-      <input type="url" id="trackUrl" required placeholder="https://soundcloud.com/your-track" />
+      <input type="url" id="trackUrl" required />
 
       <label for="genre">Genre:</label>
-      <input type="text" id="genre" required placeholder="Auto detected or custom" />
+      <input type="text" id="genre" required />
 
       <label for="credits">Credits to Spend:</label>
-      <input type="number" id="credits" min="1" required placeholder="Minimum 1" />
+      <input type="number" id="credits" min="1" required />
 
-      <button type="submit" style="margin-top: 20px;">🎯 Launch Campaign</button>
+      <button type="submit">🎯 Launch Campaign</button>
     </form>
 
-    <div id="status" class="status-message" style="text-align: center; margin-top: 20px; font-weight: bold;"></div>
+    <div id="status" class="status-message"></div>
   </main>
 
   <footer>
-    <p style="text-align: center; padding: 20px;">© 2025 TrackRepost. All Rights Reserved.</p>
+    <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
-  <!-- ✅ Main campaign logic -->
-  <script src="/js/submit-campaign.js"></script>
+  <!-- Module version of submit-campaign.js -->
+  <script type="module" src="/js/submit-campaign.js"></script>
 </body>
 </html>
 
