--- a/public/repost.html
+++ b/public/repost.html
@@ -2,107 +2,110 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Repost Campaigns - TrackRepost</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Repost Feed - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
   <script src="/js/firebaseConfig.js"></script>
-  <script>firebase.initializeApp(window.firebaseConfig);</script>
+  <script>
+    firebase.initializeApp(window.firebaseConfig);
+  </script>
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #0e0e0e;
-      color: white;
       margin: 0;
-      padding: 0;
+      background: #111;
+      color: #eee;
+      font-family: 'Segoe UI', sans-serif;
     }
 
     header {
-      background-color: #111;
-      padding: 20px;
       text-align: center;
+      padding: 20px;
+      background-color: #1e1e1e;
+      border-bottom: 1px solid #333;
     }
 
-    header h1 {
+    header img {
+      height: 60px;
+      margin-bottom: 10px;
+    }
+
+    h1 {
       font-size: 24px;
-      color: #fff;
+      margin: 0;
     }
 
     .container {
       max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
+      margin: 30px auto;
+      padding: 0 15px;
     }
 
-    .campaign-card {
-      background-color: #1a1a1a;
+    .campaign {
+      background: #1a1a1a;
       border-radius: 12px;
-      padding: 20px;
       margin-bottom: 20px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
 
-    .campaign-card img {
-      width: 100%;
-      max-width: 100%;
-      border-radius: 10px;
-      margin-bottom: 10px;
-    }
-
-    .campaign-info {
-      margin-bottom: 10px;
-    }
-
-    .campaign-info h2 {
-      font-size: 20px;
-      margin: 5px 0;
-    }
-
-    .campaign-info p {
-      margin: 2px 0;
-      color: #ccc;
-    }
-
-    iframe {
+    .campaign iframe {
       width: 100%;
       height: 166px;
       border: none;
       border-radius: 10px;
+      margin-bottom: 10px;
     }
 
-    .repost-button {
+    .campaign .info {
+      margin-top: 10px;
+    }
+
+    .campaign .info h2 {
+      font-size: 20px;
+      margin: 5px 0;
+      color: #ffd700;
+    }
+
+    .campaign .info p {
+      margin: 5px 0;
+      font-size: 14px;
+      color: #aaa;
+    }
+
+    .campaign a.button {
       display: inline-block;
-      background-color: #ff5500;
-      color: white;
-      padding: 10px 16px;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
       margin-top: 12px;
-    }
-
-    .repost-button:hover {
-      background-color: #e14800;
+      background: #ff9900;
+      color: black;
+      padding: 10px 16px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
     }
 
     footer {
-      background-color: #111;
-      color: #999;
+      background: #1e1e1e;
       text-align: center;
-      font-size: 14px;
-      padding: 10px;
+      color: #888;
+      font-size: 13px;
+      padding: 20px;
+      margin-top: 60px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>🔁 Discover Tracks & Repost to Earn</h1>
+    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" />
+    <h1>🔥 Repost Tracks & Earn Credits</h1>
   </header>
 
-  <main class="container" id="campaign-feed">
+  <main class="container" id="campaignList">
     <p>Loading campaigns...</p>
   </main>
 
@@ -112,48 +115,47 @@
 
   <script>
     const db = firebase.firestore();
-    const container = document.getElementById("campaign-feed");
+    const auth = firebase.auth();
+    const campaignList = document.getElementById("campaignList");
 
-    async function loadCampaigns() {
-      try {
-        const snap = await db.collection("campaigns").orderBy("createdAt", "desc").get();
-
-        if (snap.empty) {
-          container.innerHTML = "<p>No campaigns available yet.</p>";
-          return;
-        }
-
-        container.innerHTML = ""; // clear
-
-        snap.forEach(doc => {
-          const data = doc.data();
-          const card = document.createElement("div");
-          card.className = "campaign-card";
-
-          card.innerHTML = `
-            <img src="${data.artworkUrl || '/assets/default-art.png'}" alt="Artwork" />
-            <div class="campaign-info">
-              <h2>${data.title || "Untitled"}</h2>
-              <p>👤 ${data.artist || "Unknown Artist"}</p>
-              <p>🎵 Genre: ${data.genre}</p>
-              <p>💰 ${data.credits} credits remaining</p>
-            </div>
-            <iframe src="https://w.soundcloud.com/player/?url=${encodeURIComponent(data.trackUrl)}&color=%23ff5500&auto_play=false&show_user=true"></iframe>
-            <a href="repost-action.html?id=${doc.id}" class="repost-button">Repost & Earn</a>
-          `;
-
-          container.appendChild(card);
-        });
-      } catch (err) {
-        console.error("Error loading campaigns:", err);
-        container.innerHTML = "<p>❌ Failed to load campaigns.</p>";
+    auth.onAuthStateChanged(async (user) => {
+      if (!user) {
+        campaignList.innerHTML = "<p>❌ You must be signed in to see campaigns.</p>";
+        return;
       }
-    }
 
-    loadCampaigns();
+      const campaignsSnap = await db.collection("campaigns").get();
+      if (campaignsSnap.empty) {
+        campaignList.innerHTML = "<p>No campaigns available.</p>";
+        return;
+      }
+
+      campaignList.innerHTML = "";
+
+      campaignsSnap.forEach((doc) => {
+        const data = doc.data();
+        const div = document.createElement("div");
+        div.classList.add("campaign");
+
+        div.innerHTML = `
+          <iframe scrolling="no" frameborder="no" 
+            src="https://w.soundcloud.com/player/?url=${encodeURIComponent(data.trackUrl)}&color=%23ff5500&auto_play=false&show_user=true">
+          </iframe>
+
+          <div class="info">
+            <h2>${data.title}</h2>
+            <p>by ${data.artist} • ${data.genre} • ${data.credits} credits left</p>
+            <a class="button" href="/repost-action.html?id=${doc.id}">✅ Repost & Earn</a>
+          </div>
+        `;
+
+        campaignList.appendChild(div);
+      });
+    });
   </script>
 </body>
 </html>
+
 
 
 
