--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard – TrackRepost</title>
+  <title>Dashboard - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
@@ -13,107 +15,148 @@
 
   <style>
     body {
+      background: #111;
+      color: #eee;
       font-family: Arial, sans-serif;
-      background: #0e0e0e;
-      color: white;
       margin: 0;
       padding: 0;
     }
 
     header {
       text-align: center;
+      background: #1a1a1a;
       padding: 20px;
+      border-bottom: 1px solid #333;
+    }
+
+    header img {
+      height: 60px;
+      margin-bottom: 10px;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 28px;
+      color: #ffd700;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 0 15px;
+    }
+
+    .user-summary {
+      background: #222;
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 20px;
+    }
+
+    .user-summary p {
+      margin: 6px 0;
     }
 
     .badge {
       display: inline-block;
       padding: 4px 10px;
       border-radius: 6px;
-      font-size: 14px;
-      margin-top: 5px;
+      font-size: 13px;
+      margin-top: 6px;
     }
 
-    .free { background: #444; color: #ccc; }
-    .pro { background: #ff5500; color: white; }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
+    .badge.pro {
+      background: #00c389;
+      color: #000;
+      font-weight: bold;
     }
 
-    .campaign-card {
-      background-color: #1a1a1a;
+    .badge.free {
+      background: #444;
+      color: #fff;
+    }
+
+    .campaign {
+      background: #1a1a1a;
       border-radius: 12px;
-      padding: 20px;
       margin-bottom: 20px;
+      padding: 20px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.6);
     }
 
-    .campaign-card img {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 10px;
-    }
-
-    iframe {
+    .campaign iframe {
       width: 100%;
       height: 166px;
       border-radius: 10px;
+      border: none;
+      margin-bottom: 10px;
+    }
+
+    .campaign .info h2 {
+      margin: 0 0 6px;
+      font-size: 20px;
+      color: #ffd700;
+    }
+
+    .campaign .info p {
+      margin: 2px 0;
+      color: #aaa;
+      font-size: 14px;
+    }
+
+    .campaign .button {
+      display: inline-block;
+      background: #ff9900;
+      color: #000;
+      padding: 10px 16px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
       margin-top: 10px;
     }
 
-    table {
-      width: 100%;
-      margin-top: 20px;
-      border-collapse: collapse;
-    }
-
-    th, td {
-      padding: 10px;
-      border-bottom: 1px solid #333;
-      text-align: left;
-    }
-
-    th {
-      background-color: #222;
-    }
-
     footer {
-      background: #111;
       text-align: center;
-      color: #aaa;
-      padding: 15px;
       font-size: 13px;
+      color: #999;
+      margin-top: 60px;
+      padding: 20px 0;
+      background: #1a1a1a;
+    }
+
+    #logout-btn {
+      margin-top: 20px;
+      padding: 8px 14px;
+      font-size: 14px;
+      background: #444;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #logout-btn:hover {
+      background: #666;
     }
   </style>
 </head>
 <body>
   <header>
+    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" />
     <h1>📊 Your Dashboard</h1>
-    <p id="userInfo"></p>
-    <p id="planBadge"></p>
-    <p id="creditBalance"></p>
-    <button id="logout-btn">Logout</button>
   </header>
 
   <main class="container">
-    <h2>🎯 Your Campaign</h2>
-    <div id="campaigns"><p>Loading campaigns...</p></div>
+    <div class="user-summary">
+      <p id="userInfo">Loading user info...</p>
+      <p><strong>Credits:</strong> <span id="creditBalance">Loading...</span></p>
+      <div id="planBadge"></div>
+      <button id="logout-btn">Logout</button>
+    </div>
 
-    <h2>📈 Credit History</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Type</th>
-          <th>Amount</th>
-          <th>Reason</th>
-          <th>Date</th>
-        </tr>
-      </thead>
-      <tbody id="transactions">
-        <tr><td colspan="4">Loading...</td></tr>
-      </tbody>
-    </table>
+    <section id="campaigns">
+      <p>Loading your campaigns...</p>
+    </section>
   </main>
 
   <footer>
@@ -123,6 +166,7 @@
   <script src="/js/dashboard.js"></script>
 </body>
 </html>
+
 
 
 
